--- a/src/styles/override.css
+++ b/src/styles/override.css
@@ -7,6 +7,10 @@
 		--ion-safe-area-right: var(--device-inset-right, 0px);
 		--ion-safe-area-bottom: var(--device-inset-bottom, 0px);
 	}
+
+	ion-toast {
+		--ion-safe-area-bottom: calc(var(--device-inset-bottom, 0px) + 80px);
+	}
 }
 
 @supports (padding-top: env(safe-area-inset-top)) {
@@ -15,6 +19,10 @@
 		--ion-safe-area-left: var(--device-inset-left, env(safe-area-inset-left, 0px));
 		--ion-safe-area-right: var(--device-inset-right, env(safe-area-inset-right, 0px));
 		--ion-safe-area-bottom: var(--device-inset-bottom, env(safe-area-inset-bottom, 0px));
+	}
+
+	ion-toast {
+		--ion-safe-area-bottom: calc(var(--device-inset-bottom, env(safe-area-inset-bottom, 0px)) + 80px);
 	}
 }
 
