fix markdown checkbox and lists being broken

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -152,28 +152,28 @@
     background: linear-gradient(to right, var(--markdown-text-bg-colors));
 }
 
-.markdown-content ul ion-checkbox {
-    width: min-content;
-    --size: 1em;
-    height: 1.5em;
-    flex: none;
+.markdown-content ul {
+    margin-left: 0;
+    padding-left: 0;
+    list-style: none;
 }
 
-.markdown-content ul li {
+.markdown-content ul li span {
     display: flex;
     flex-direction: row;
     gap: 0.5em;
     flex-wrap: nowrap;
 }
 
-.markdown-content ul li:not(:has(ion-checkbox))::before {
+.markdown-content ul li span ion-checkbox {
+    width: min-content;
+    --size: 1em;
+    height: 1.5em;
+}
+
+.markdown-content ul li span:not(:has(ion-checkbox))::before {
     content: "•";
     width: 1em;
     flex: none;
     text-align: center;
-}
-
-.markdown-content ul {
-    margin-left: 0;
-    padding-left: 0;
 }
