I love useless customizations part 2

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -167,6 +167,11 @@
     text-shadow: var(--markdown-text-shadow);
 }
 
+.markdown-content span.center {
+    display: block;
+    text-align: center;
+}
+
 .markdown-content ul {
     padding-inline-start: 1em;
 }
