refactor callouts to account for inline tokens in text, add svg

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -228,3 +228,8 @@
     margin-bottom: 8px;
     font-weight: bold;
 }
+
+.markdown-content ion-icon {
+    height: 1em;
+    vertical-align: middle;
+}
