--- a/src/styles/override.css
+++ b/src/styles/override.css
@@ -1,29 +1,23 @@
 @import url(markdown.css);
 
-@supports (padding-top: 20px) {
-	html {
-		--ion-safe-area-top: var(--device-inset-top, 0px);
-		--ion-safe-area-left: var(--device-inset-left, 0px);
-		--ion-safe-area-right: var(--device-inset-right, 0px);
-		--ion-safe-area-bottom: var(--device-inset-bottom, 0px);
-	}
-
-	ion-toast {
-		--ion-safe-area-bottom: calc(var(--device-inset-bottom, 0px) + 80px);
+@supports (padding-top: env(safe-area-inset-top)) {
+	:root {
+		--device-inset-top: env(safe-area-inset-top, 0px);
+		--device-inset-left: env(safe-area-inset-left, 0px);
+		--device-inset-right: env(safe-area-inset-right, 0px);
+		--device-inset-bottom: env(safe-area-inset-bottom, 0px);
 	}
 }
 
-@supports (padding-top: env(safe-area-inset-top)) {
-	html {
-		--ion-safe-area-top: var(--device-inset-top, env(safe-area-inset-top, 0px));
-		--ion-safe-area-left: var(--device-inset-left, env(safe-area-inset-left, 0px));
-		--ion-safe-area-right: var(--device-inset-right, env(safe-area-inset-right, 0px));
-		--ion-safe-area-bottom: var(--device-inset-bottom, env(safe-area-inset-bottom, 0px));
-	}
+html {
+	--ion-safe-area-top: var(--device-inset-top, 0px);
+	--ion-safe-area-left: var(--device-inset-left, 0px);
+	--ion-safe-area-right: var(--device-inset-right, 0px);
+	--ion-safe-area-bottom: var(--device-inset-bottom, 0px);
+}
 
-	ion-toast {
-		--ion-safe-area-bottom: calc(var(--device-inset-bottom, env(safe-area-inset-bottom, 0px)) + 80px);
-	}
+ion-toast {
+	--ion-safe-area-bottom: calc(var(--device-inset-bottom, 0px) + 80px);
 }
 
 html, html.md {
