--- a/src/styles/override.css
+++ b/src/styles/override.css
@@ -14,6 +14,9 @@ html {
 	--ion-safe-area-left: var(--device-inset-left, 0px);
 	--ion-safe-area-right: var(--device-inset-right, 0px);
 	--ion-safe-area-bottom: var(--device-inset-bottom, 0px);
+
+	/* For some reason iPhones apply a padding underneath, so force height=viewport-height */
+	height: 100vh;
 }
 
 ion-toast {
